--- a/app/src/main/res/layout/fragment_analog.xml
+++ b/app/src/main/res/layout/fragment_analog.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/transparent">
+    android:background="@color/transparent"
+
+    >
 
     <me.ibrahimsn.lib.Speedometer
         android:id="@+id/speedometer"
