--- a/app/src/main/res/layout/fragment_route_finder_google.xml
+++ b/app/src/main/res/layout/fragment_route_finder_google.xml
@@ -315,7 +315,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/start_navigation_button"
         android:layout_width="@dimen/_110sdp"
-        android:layout_height="@dimen/_28sdp"
+        android:layout_height="@dimen/_30sdp"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
         android:layout_marginEnd="16dp"
@@ -337,7 +337,7 @@
             android:rotationY="180"
             android:scaleType="centerInside"
             android:src="@drawable/ic_back_arrow"
-            app:layout_constraintBottom_toTopOf="@+id/guideline8"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/white" />
@@ -356,13 +356,6 @@
             app:layout_constraintEnd_toStartOf="@+id/imageView4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageView4" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="38dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
