--- a/app/src/main/res/layout/activity_speedometer.xml
+++ b/app/src/main/res/layout/activity_speedometer.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_activity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/white"
+    android:background="@color/black"
     android:orientation="vertical">
 
     <ImageView
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/home_bg" />
+         />
 
 
     <androidx.viewpager.widget.ViewPager
