--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:fitsSystemWindows="true">
-
 
 
     <ImageView
@@ -16,20 +17,19 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/gifView"
-        android:layout_width="@dimen/_230sdp"
-        android:layout_height="@dimen/_270sdp"
-        app:lottie_rawRes="@raw/splash_lottie_json"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_speed=".7"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_170sdp"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/guideline13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9" />
-
+        app:layout_constraintVertical_bias="0.9"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="false"
+        app:lottie_rawRes="@raw/splash_lottie_json"
+        app:lottie_speed=".7" />
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -37,8 +37,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.62" />
+        app:layout_constraintGuide_percent="0.57" />
 
+    <TextView
+        android:id="@+id/splash_tittle"
+        android:layout_width="@dimen/_230sdp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/inter_bold"
+        android:gravity="center"
+        android:maxLines="2"
+        android:text="@string/app_name_plash"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/bg"
+        app:layout_constraintEnd_toEndOf="@+id/gifView"
+        app:layout_constraintStart_toStartOf="@+id/gifView"
+        app:layout_constraintTop_toBottomOf="@+id/gifView"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
