--- a/app/src/main/res/layout/fragment_analog.xml
+++ b/app/src/main/res/layout/fragment_analog.xml
@@ -14,16 +14,17 @@
         android:layout_centerInParent="true"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        app:borderColor="@color/blue"
+        app:borderColor="@color/white"
         app:borderSize="8dp"
-        app:fillColor="@color/black_text_color"
+        app:fillColor="@color/flat_red_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:maxSpeed="100"
         app:metricText="km/h"
-        app:textColor="@color/black_text_color" />
+        app:sv_markColor="@color/white"
+        app:textColor="@color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
