--- a/app/src/main/res/layout/fragment_awesome.xml
+++ b/app/src/main/res/layout/fragment_awesome.xml
@@ -11,13 +11,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        app:sv_markColor="@color/flat_grey_normal_1"
+        app:sv_indicatorColor="@color/flat_red_1"
+        app:sv_trianglesColor="@color/flat_red_1"
+        app:sv_speedometerColor="@color/flat_red_2"
         android:background="@color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:sv_speedTextSize="32sp"
-        app:sv_withTremble="false"
+        app:sv_speedTextSize="50sp"
+        app:sv_withTremble="true"
       />
 
 
