--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -494,6 +494,7 @@
         android:padding="6dp"
         android:scaleType="centerInside"
         android:src="@drawable/hamburger_icon"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
@@ -516,7 +517,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:background="@color/transparent"
-        android:padding="8dp"
+        android:padding="10dp"
         android:scaleType="fitXY"
         android:src="@drawable/share_black"
         app:layout_constraintEnd_toStartOf="@+id/info_button"
