--- a/app/src/main/res/layout/places_item.xml
+++ b/app/src/main/res/layout/places_item.xml
@@ -42,7 +42,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textSize="14sp"
+            android:maxLines="1"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
