--- a/app/src/main/res/layout/premium_user_popup.xml
+++ b/app/src/main/res/layout/premium_user_popup.xml
@@ -225,6 +225,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/subscribe_now"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11">
 
@@ -235,7 +236,7 @@
             android:elevation="2dp"
             android:fontFamily="@font/roboto"
             android:text="$ 1.49"
-            
+
             android:textSize="34sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -251,7 +252,7 @@
             android:layout_marginBottom="4dp"
             android:fontFamily="@font/roboto"
             android:text="/"
-            
+
 
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/sku_text"
@@ -264,7 +265,7 @@
             android:layout_marginStart="2dp"
             android:fontFamily="@font/roboto"
             android:text="week"
-            
+
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/slash"
