--- a/app/src/main/res/drawable-mdpi/customborder.xml
+++ b/app/src/main/res/drawable-mdpi/customborder.xml
@@ -5,5 +5,5 @@
     tools:ignore="MissingDefaultResource">
     <corners android:radius="0dp"/>
     <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
-    <stroke android:width="1dp" android:color="@color/blue"/>
+    <stroke android:width="1dp" android:color="@color/flat_grey_normal_1"/>
 </shape>
