--- a/app/src/main/res/layout/activity_speedometer.xml
+++ b/app/src/main/res/layout/activity_speedometer.xml
@@ -8,17 +8,6 @@
     android:background="@color/black_overlay"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/home_bg_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
-
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
@@ -28,7 +17,14 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline17"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <ImageView
+            android:id="@+id/home_bg_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY" />
+    </androidx.viewpager.widget.ViewPager>
 
 
     <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
@@ -37,20 +33,18 @@
         android:layout_height="wrap_content"
         app:dampingRatio="0.5"
         app:dotsColor="@color/blue"
-        app:dotsStrokeColor="@color/bluealpha"
         app:dotsCornerRadius="2dp"
         app:dotsSize="6dp"
         app:dotsSpacing="6dp"
+        app:dotsStrokeColor="@color/bluealpha"
         app:dotsStrokeWidth="2dp"
-        app:stiffness="300"
         app:layout_constraintBottom_toTopOf="@+id/adViewBanner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewPager"
-        app:layout_constraintVertical_bias="0.0"
         app:progressMode="false"
         app:selectedDotColor="@color/black_text_color"
-        />
+        app:stiffness="300" />
     <ImageButton
         android:id="@+id/back_button"
         android:layout_width="38dp"
@@ -70,16 +64,21 @@
     <FrameLayout
         android:id="@+id/adViewBanner"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dots_indicator" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.53" />
+        app:layout_constraintGuide_percent="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
