--- a/app/src/main/res/layout/explore_places.xml
+++ b/app/src/main/res/layout/explore_places.xml
@@ -16,14 +16,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fillViewport="true"
-        app:layout_constraintBottom_toTopOf="@+id/ads_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/back_button">
@@ -43,8 +41,9 @@
                 android:id="@+id/nearby_places_button"
                 android:layout_width="@dimen/_110sdp"
                 android:layout_height="@dimen/_75sdp"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline10"
@@ -85,13 +84,14 @@
             </androidx.cardview.widget.CardView>
 
 
-
             <androidx.cardview.widget.CardView
                 android:id="@+id/saved_places_button"
                 android:layout_width="@dimen/_110sdp"
                 android:layout_height="@dimen/_75sdp"
                 android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline10"
@@ -182,11 +182,14 @@
     <FrameLayout
         android:id="@+id/ads_parent"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/policy_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView">
 
     </FrameLayout>
 
