--- a/app/src/main/res/layout/native_ad_unified_big.xml
+++ b/app/src/main/res/layout/native_ad_unified_big.xml
@@ -2,6 +2,7 @@
 <com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
@@ -17,26 +18,17 @@
         android:paddingTop="3dp"
         android:paddingRight="2dp">
 
-        <TextView
-            android:id="@+id/ads_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/ad_label"
-            android:textColor="@color/black_overlay"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <ImageView
             android:id="@+id/small_ad_app_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="12dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:adjustViewBounds="true"
-            android:paddingEnd="5dp"
             android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:paddingBottom="5dp"
-            app:layout_constraintStart_toEndOf="@+id/ads_label"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -62,6 +54,7 @@
             android:gravity="bottom"
             android:textSize="14sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/small_ad_headline"
             app:layout_constraintTop_toBottomOf="@+id/small_ad_headline" />
@@ -75,18 +68,21 @@
             android:numStars="5"
             android:progressTint="@color/pro"
             android:stepSize="0.5"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="@+id/small_ad_headline"
             app:layout_constraintTop_toBottomOf="@+id/small_ad_advertiser" />
 
         <TextView
             android:id="@+id/small_ad_body"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_gravity="center"
             android:ellipsize="end"
+            android:maxLines="2"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/small_ad_app_icon"
             app:layout_constraintEnd_toEndOf="@+id/small_ad_headline"
-            app:layout_constraintStart_toEndOf="@+id/ads_label"
+            app:layout_constraintStart_toStartOf="@+id/small_ad_headline"
             app:layout_constraintTop_toBottomOf="@+id/small_ad_stars" />
 
         <ImageView
@@ -94,6 +90,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:adjustViewBounds="true"
             android:maxHeight="100dp"
             android:scaleType="fitCenter"
@@ -106,13 +104,14 @@
         <Button
             android:id="@+id/small_ad_call_to_action"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_48sdp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:backgroundTint="@color/blue"
+            android:background="@drawable/button_background"
             android:gravity="center"
             android:text="text"
             android:textAllCaps="true"
+            android:textColor="@color/white"
             android:textSize="19sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -122,12 +121,14 @@
             android:id="@+id/ad_media"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             app:layout_constraintBottom_toBottomOf="@+id/small_ad_image"
             app:layout_constraintEnd_toEndOf="@+id/small_ad_image"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/small_ad_body" />
+            app:layout_constraintTop_toBottomOf="@+id/small_ad_app_icon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
