--- a/app/src/main/res/layout/native_ad_unified_small_no_media.xml
+++ b/app/src/main/res/layout/native_ad_unified_small_no_media.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/customborder"
 
     >
 
@@ -28,8 +29,8 @@
 
         <ImageView
             android:id="@+id/small_ad_app_icon"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
             android:adjustViewBounds="true"
@@ -87,7 +88,7 @@
             android:layout_gravity="center"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textSize="14sp"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/small_ad_app_icon"
             app:layout_constraintEnd_toEndOf="@+id/small_ad_headline"
             app:layout_constraintStart_toStartOf="@+id/small_ad_headline"
