--- a/app/src/main/res/layout/premium_user_popup.xml
+++ b/app/src/main/res/layout/premium_user_popup.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageView11"
         android:layout_width="200dp"
         android:layout_height="180dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline11"
         app:layout_constraintStart_toStartOf="@+id/guideline10"
         app:layout_constraintTop_toTopOf="parent"
@@ -47,9 +47,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:elevation="2dp"
         android:fontFamily="@font/roboto"
-        android:text="Unlimited routes and locations"
+        android:text="Navigation on the Go
+"
 
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
@@ -72,7 +72,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:elevation="2dp"
         android:fontFamily="@font/roboto"
         android:text="Ads free version"
 
@@ -98,9 +97,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:elevation="2dp"
         android:fontFamily="@font/roboto"
-        android:text="Turn by turn voice navigation"
+        android:text="Access to unlimited places
+"
 
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView8"
@@ -123,9 +122,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:elevation="2dp"
         android:fontFamily="@font/roboto"
-        android:text="Explore new places"
+        android:text="Voice Navigation"
 
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView9"
@@ -135,32 +133,6 @@
         app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
 
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="@+id/imageView9"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9"
-        app:srcCompat="@drawable/star" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:elevation="2dp"
-        android:fontFamily="@font/roboto"
-        android:text="Driving mode"
-
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
-        app:layout_constraintEnd_toEndOf="@+id/premium_popup_title"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView10"
-        app:layout_constraintTop_toTopOf="@+id/imageView10" />
-
-
     <TextView
         android:id="@+id/continue_with_ads_button"
         android:layout_width="wrap_content"
@@ -168,8 +140,9 @@
         android:elevation="2dp"
         android:fontFamily="@font/roboto"
         android:text="@string/continue_with_ads"
-        
+
         android:textSize="20sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/continue_to_trial_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -180,11 +153,12 @@
         android:id="@+id/continue_to_trial_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="2dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/roboto"
+
         android:text="3 Days' Free Trial"
-        
         android:textSize="16sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/instructions_for_renewal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -193,7 +167,7 @@
         android:id="@+id/subscribe_now"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/button_background_white"
         android:fontFamily="@font/roboto"
         android:gravity="center"
@@ -227,7 +201,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11">
+        app:layout_constraintTop_toBottomOf="@+id/textView10">
 
         <TextView
             android:id="@+id/sku_text"
@@ -281,9 +255,8 @@
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/roboto"
         android:gravity="center"
-        android:text="renew"
-
-        android:visibility="gone"
+        android:text="@string/renew_instructions"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/policy_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -343,10 +316,85 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:padding="8dp"
-        
+
+        android:text="@string/privacy_policy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/premium_user_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/rounded_background"
+        android:elevation="2dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/instructions_for_renewal"
+        app:layout_constraintEnd_toEndOf="@+id/instructions_for_renewal"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/instructions_for_renewal"
+        app:layout_constraintTop_toBottomOf="@+id/imageView11"
+        app:layout_constraintVertical_bias="1.0">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/gifView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.9"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/fireworks"
+            app:lottie_speed="0.7" />
+
+
+        <TextView
+            android:id="@+id/you_pro_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:fontFamily="@font/poppins"
+            android:text="Congratulations!"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:fontFamily="@font/poppins"
+            android:gravity="center"
+            android:text="Enjoy Your Premium \nUser Experience!"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="@+id/you_pro_text"
+            app:layout_constraintStart_toStartOf="@+id/you_pro_text"
+            app:layout_constraintTop_toBottomOf="@+id/you_pro_text" />
+
+        <TextView
+            android:id="@+id/unsubscribe_now"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="60dp"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="@string/cancel_subscription"
+            android:textColor="@color/black_text_color"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
