Finalized v5 fixed crashes... font need to be same all places

--- a/app/src/main/res/layout/deatail_forecast_card.xml
+++ b/app/src/main/res/layout/deatail_forecast_card.xml
@@ -60,7 +60,7 @@
                 android:id="@+id/min_temp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/poppins"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -92,7 +92,7 @@
                         android:id="@+id/max_temp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto"
+                        android:fontFamily="@font/poppins"
                         android:textColor="@color/white"
                         android:textSize="16sp"
                         android:textStyle="bold" />
