--- a/app/src/main/res/layout/activity_location_from_google_map.xml
+++ b/app/src/main/res/layout/activity_location_from_google_map.xml
@@ -133,7 +133,7 @@
                 android:id="@+id/tvAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/poppins"
                 android:maxLines="1"
                 android:text=""
                 android:textColor="@color/blue"
@@ -143,7 +143,7 @@
                 android:id="@+id/tvLatLng"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/poppins"
                 android:text=""
                 android:textColor="@color/blue"
                 android:textSize="14sp" />
@@ -168,7 +168,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/poppins"
                 android:text="@string/select"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
