--- a/app/src/main/res/layout/activity_my_location_google.xml
+++ b/app/src/main/res/layout/activity_my_location_google.xml
@@ -162,7 +162,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto"
+            android:fontFamily="@font/poppins"
             android:maxLines="2"
             android:padding="4dp"
             android:textColor="@color/black_text_color"
@@ -317,7 +317,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto"
+                        android:fontFamily="@font/poppins"
                         android:text="@string/save"
                         android:textColor="@color/white"
                         android:textSize="14sp" />
