--- a/app/src/main/res/layout/activity_preview_places.xml
+++ b/app/src/main/res/layout/activity_preview_places.xml
@@ -148,7 +148,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto"
+            android:fontFamily="@font/poppins"
             android:maxLines="2"
             android:padding="4dp"
             android:textColor="@color/black_text_color"
