--- a/app/src/main/res/layout/activity_serch_places.xml
+++ b/app/src/main/res/layout/activity_serch_places.xml
@@ -259,7 +259,7 @@
                 android:id="@+id/tvAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/poppins"
                 android:maxLines="1"
                 android:text=""
                 android:textColor="@color/black_text_color"
@@ -269,7 +269,7 @@
                 android:id="@+id/tvLatLng"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/poppins"
                 android:text=""
                 android:textColor="@color/black_text_color"
                 android:textSize="14sp" />
@@ -298,7 +298,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/poppins"
                 android:text="@string/go"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
