--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -48,7 +48,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="24dp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/poppins"
             android:gravity="center"
             android:maxLines="2"
             android:text="Today"
@@ -111,7 +111,7 @@
             android:minLines="2"
             android:text="Thursday, 18 Aug"
             android:textColor="@color/black_text_color"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -340,7 +340,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="@dimen/_6sdp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
