--- a/app/src/main/res/layout/native_ad_unified_big.xml
+++ b/app/src/main/res/layout/native_ad_unified_big.xml
@@ -2,10 +2,8 @@
 <com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -107,6 +105,7 @@
             android:layout_height="@dimen/_48sdp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/button_background"
             android:gravity="center"
             android:text="text"
