--- a/app/src/main/res/layout/native_ad_unified_small_no_media.xml
+++ b/app/src/main/res/layout/native_ad_unified_small_no_media.xml
@@ -13,14 +13,12 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:orientation="vertical"
-        android:paddingLeft="2dp"
-        android:paddingTop="3dp"
-        android:paddingRight="2dp">
+        >
 
 
         <View
             android:id="@+id/view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#ECECEC"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,13 +103,16 @@
             app:layout_constraintStart_toStartOf="@+id/small_ad_headline"
             app:layout_constraintTop_toBottomOf="@+id/small_ad_headline" />
 
-        <Button
+        <TextView
             android:id="@+id/small_ad_call_to_action"
             android:layout_width="0dp"
-            android:layout_height="65dp"
+            android:layout_height="55dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/button_background"
+
             android:backgroundTint="@color/blue"
             android:gravity="center"
             android:text="text"
