--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="alpha_white">#a8FFFFFF</color>
     <color name="pro">#FBE892</color>
     <color name="black_text_color">#585555</color>
     <color name="blue">#2685EB</color>
