--- a/app/src/main/res/drawable-mdpi/customborder.xml
+++ b/app/src/main/res/drawable-mdpi/customborder.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:shape="rectangle"
     tools:ignore="MissingDefaultResource">
-    <solid android:color="@color/alpha_white"/>
+    <solid android:color="@color/white"/>
     <corners android:radius="0dp"/>
-    <stroke android:width="1dp" android:color="@color/flat_grey_normal_1"/>
+    <stroke android:width="1dp" android:color="@color/flat_grey_dark_1"/>
 </shape>
