--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -149,12 +149,11 @@
                     android:orientation="vertical">
 
                     <ImageView
-
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:padding="8dp"
                         android:scaleType="centerInside"
-                        android:src="@drawable/weather_icon"
+                        android:src="@drawable/saved_places"
                         app:layout_constraintBottom_toTopOf="@+id/textView5"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -166,8 +165,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="center"
-                        android:text="Weather"
-
+                        android:text="Saved Places"
                         android:textColor="@color/black_text_color"
                         android:textSize="12sp"
 
@@ -216,7 +214,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="center"
-                        android:text="Explore Places"
+                        android:text="Places Nearby"
                         android:textColor="@color/black_text_color"
 
                         android:textSize="12sp"
@@ -321,6 +319,7 @@
         android:layout_height="35dp"
         android:background="@color/transparent"
         android:padding="10dp"
+        android:visibility="gone"
         android:scaleType="fitXY"
         android:src="@drawable/share_black"
         app:layout_constraintBottom_toBottomOf="@+id/tittle"
@@ -336,6 +335,7 @@
         android:layout_marginEnd="16dp"
         android:background="@color/transparent"
         android:padding="8dp"
+        android:visibility="gone"
         android:scaleType="fitXY"
         android:src="@drawable/info_icon"
         app:layout_constraintBottom_toBottomOf="@+id/tittle"
@@ -351,10 +351,8 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/bg"
+        app:layout_constraintBottom_toTopOf="@+id/policy_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline7">
 
@@ -362,8 +360,9 @@
 
     <ImageView
         android:id="@+id/pro_button"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="48dp"
+        android:layout_height="44dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/crown"
         app:layout_constraintBottom_toBottomOf="@+id/share_app_ib"
         app:layout_constraintEnd_toStartOf="@+id/share_app_ib"
@@ -374,5 +373,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6" />
+        app:layout_constraintGuide_percent="0.51" />
+
+    <TextView
+        android:id="@+id/policy_button"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:padding="8dp"
+
+        android:text="@string/privacy_policy"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
