--- a/app/src/main/res/layout/fragment_route_finder_google.xml
+++ b/app/src/main/res/layout/fragment_route_finder_google.xml
@@ -140,6 +140,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/input_bg"
             android:elevation="4dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/back_button"
             app:layout_constraintTop_toTopOf="@+id/back_button">
@@ -184,15 +185,15 @@
             android:id="@+id/dest_container"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/input_bg"
             android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/source_container"
-            app:layout_constraintTop_toBottomOf="@+id/source_container">
+            app:layout_constraintStart_toEndOf="@+id/back_button"
+            app:layout_constraintTop_toTopOf="@+id/back_button">
 
 
             <ImageView
@@ -314,48 +315,54 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/start_navigation_button"
-        android:layout_width="@dimen/_110sdp"
-        android:layout_height="@dimen/_30sdp"
+        android:layout_width="@dimen/_60sdp"
+        android:layout_height="@dimen/_60sdp"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/button_background"
+        android:background="@drawable/round_white_buttton"
+        android:backgroundTint="@color/blue"
         android:elevation="6dp"
         android:gravity="center"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/adsParent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="@+id/recenter_location_button"
+        app:layout_constraintStart_toStartOf="@+id/recenter_location_button">
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="26dp"
             android:layout_height="26dp"
+            android:layout_marginTop="14dp"
             android:padding="@dimen/_4sdp"
             android:rotationY="180"
             android:scaleType="centerInside"
             android:src="@drawable/ic_back_arrow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             app:tint="@color/white" />
 
 
         <TextView
+            android:id="@+id/textView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
-            android:text="@string/show_route"
+            android:text="Go!"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-            app:layout_constraintEnd_toStartOf="@+id/imageView4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView4" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -375,6 +382,34 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/google_map" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/day_night_mode"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/round_white_buttton"
+        android:elevation="6dp"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/recenter_location_button"
+        app:layout_constraintEnd_toEndOf="@+id/recenter_location_button">
+
+        <ImageView
+            android:id="@+id/day_night_iv"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/layers_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layers_selection_button"
@@ -396,6 +431,65 @@
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:src="@drawable/layers_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/traffic_toggle_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/round_white_buttton"
+        android:elevation="6dp"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/recenter_location_button"
+        app:layout_constraintEnd_toEndOf="@+id/recenter_location_button">
+
+        <ImageView
+            android:id="@+id/traffic_iv"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/trafficview_on"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/angle_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/round_white_buttton"
+        android:elevation="6dp"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/recenter_location_button"
+        app:layout_constraintEnd_toEndOf="@+id/recenter_location_button">
+
+        <ImageView
+            android:id="@+id/angle_iv"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/two_dimen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -429,10 +523,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-             />
+            app:tint="@color/blue" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
     <FrameLayout
